--- a/HomePage/Home_style.css
+++ b/HomePage/Home_style.css
@@ -3,28 +3,35 @@
 body {
   background-color: #0b1c2d;
   border-top-right-radius: 80%;
-  
 }
 
 /* Wiam */
 #section_1 {
   background-color: #0b1c2d;
   border-bottom-right-radius: 80px;
- 
 }
 
 .item-nav {
   color: #fff;
-  /* Navigation */
   font-family: Rubik;
   font-size: 16px;
   font-style: normal;
   font-weight: 500;
-  line-height: 100%; /* 16px */
+  line-height: 100%;
   letter-spacing: 0.16px;
+  transition: color 0.3s ease;
 }
+
 .navbar-nav .nav-link:hover {
   color: #00a8ff !important;
+}
+
+.navbar-nav .nav-link.active {
+  color: #00a8ff !important; 
+}
+
+.navbar-nav .nav-link.active {
+  font-weight: 700;
 }
 
 .contact a {
@@ -53,7 +60,7 @@ body {
   line-height: 140%; /* 16.8px */
 }
 
-.contact h5 a{
+.contact h5 a {
   color: var(--White, #fff);
   margin: 0px;
 
@@ -65,36 +72,63 @@ body {
   line-height: 140%; /* 33.6px */
 }
 
-.first-char-slogan {
-  color: #2b9cb8;
-  font-family: Rubik;
-  font-size: 64px;
-  font-style: normal;
-  font-weight: 700;
-  line-height: 120%; /* 76.8px */
-}
 .slogan {
-  color: #fff;
-  font-family: Rubik;
   font-size: 64px;
-  font-style: normal;
   font-weight: 700;
-  line-height: 120%;
+  line-height: 1.4;
+  text-align: start;
+  color: white;
 }
+
+.first-char {
+  color: #2b9cb8;
+}
+
+.rest {
+  opacity: 0;
+  transition: opacity 0.3s ease-in;
+  display: inline;
+}
+
+.rest.active {
+  opacity: 1;
+}
+
+.typing {
+  display: inline;
+}
+
+.cursor {
+  display: inline-block;
+  width: 3px;
+  height: 70px;
+  background: white;
+  animation: blink 0.8s step-end infinite;
+  vertical-align: bottom;
+  margin-left: 2px;
+}
+
+@keyframes blink {
+  0%,
+  100% {
+    opacity: 1;
+  }
+  50% {
+    opacity: 0;
+  }
+}
+
 .carousel-container {
   position: relative;
-  
+
   overflow: hidden;
   display: flex;
   justify-content: center;
-  gap: 20px; 
-  Width:490px;
-  Height:800px ;
-   top: -10px;
- 
+  gap: 20px;
+  width: 490px;
+  height: 800px;
+  top: -10px;
 }
-
- 
 
 .image-track {
   display: flex;
@@ -105,24 +139,21 @@ body {
 
 .image-track img {
   width: 100%;
-  max-width: 200px; 
+  max-width: 200px;
   height: auto;
   display: block;
-  border-radius: 10px; 
+  border-radius: 10px;
   box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.2); /* Adds a subtle shadow */
-
 }
 /* Smooth infinite scrolling animation */
 @keyframes scroll-up {
   0% {
-      transform: translateY(0);
+    transform: translateY(0);
   }
   100% {
-      transform: translateY(-100%);
+    transform: translateY(-100%);
   }
 }
-
-
 
 .meduim_title {
   color: #26b3d6;
@@ -163,6 +194,39 @@ body {
   font-style: normal;
   font-weight: 500;
   line-height: 100%;
+  transition: 0.3s ease;
+}
+
+.buttons:hover {
+  gap: 15px;
+}
+
+.buttons i {
+  position: relative;
+}
+
+.buttons i::after {
+  content: '';
+  position: absolute;
+  inset: 0;
+  opacity: 0;
+  pointer-events: none;
+}
+
+.buttons i {
+  display: inline-block;
+  transition: 0.3s ease;
+}
+
+@keyframes arrowShake {
+  0% { transform: translateX(0); }
+  50% { transform: translateX(8px); }
+  70% { transform: translateX(4px); }
+  100% { transform: translateX(0); }
+}
+
+.buttons:hover i {
+  animation: arrowShake 0.6s ease-in-out;
 }
 
 .trusted-text {
@@ -175,172 +239,146 @@ body {
   font-weight: 400;
   line-height: 160%; /* 25.6px */
 }
-.img2{
- height: 353px ;
- width :229px;
-border-radius: 12px;
-border: 5px solid  #2b9cb8 ;
-
-
+.img2 {
+  height: 353px;
+  width: 229px;
+  border-radius: 12px;
+  border: 5px solid #2b9cb8;
 }
 /* Yasser */
-#section_2{ 
+#section_2 {
   background-color: #0b1c2d;
 }
 .circle {
-    width: 200px;
-    height: 200px;
-    border-radius: 50%;
-    background-color: #0b1c2d;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    overflow: hidden;
+  width: 200px;
+  height: 200px;
+  border-radius: 50%;
+  background-color: #0b1c2d;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  overflow: hidden;
 }
 .large-circle {
-    width: 400px;
-    height: 400px;
+  width: 400px;
+  height: 400px;
 }
 .circle img {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
 }
 .white-container {
-    background-color: white;
-    position: relative;
-    margin: 0 auto;
-    border-radius: 100px 0px 100px 0px;
+  background-color: white;
+  position: relative;
+  margin: 0 auto;
+  border-radius: 100px 0px 100px 0px;
 }
 .title {
-    color: var(--Black, #000);
-    font-family: Rubik;
-    font-size: 45px;
-    font-style: normal;
-    font-weight: 700;
-    line-height: normal;
-    text-transform: capitalize;
+  color: var(--Black, #000);
+  font-family: Rubik;
+  font-size: 45px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: normal;
+  text-transform: capitalize;
 }
 .para {
-    color: #231f20;
-    font-family: Rubik;
-    font-size: 17px;
-    font-style: normal;
-    font-weight: 400;
-    line-height: 36px;
+  color: #231f20;
+  font-family: Rubik;
+  font-size: 17px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 36px;
 }
-.buttons {
-    color: var(--White, #fff);
-    border-radius: 15px;
-    background: #2b9cb8;
-    text-decoration: none;
-    display: inline-flex;
-    padding: 24px 34px;
-    justify-content: center;
-    align-items: center;
-    gap: 10px;
-    text-align: center;
-    font-family: Rubik;
-    font-size: 16px;
-    font-style: normal;
-    font-weight: 500;
-    line-height: 100%;
-}
+
 .pattern {
-    position: absolute;
-    bottom: 50px;
-    right: 50px;
-    width: 150px;
-    height: 100px;
-    opacity: 0.8;
-    background-image: url("/front/One_Page/Home_Page/assets/Patter.svg");
-    background-size: cover;
+  position: absolute;
+  bottom: 50px;
+  right: 50px;
+  width: 150px;
+  height: 100px;
+  opacity: 0.8;
+  background-image: url("/front/One_Page/Home_Page/assets/Patter.svg");
+  background-size: cover;
 }
 /* Hamza */
-#section_3{
+#section_3 {
   border-top-left-radius: 16px;
   background-color: #0b1c2d;
- position: relative;
-
-  
+  position: relative;
 }
-.text3 .round{
+.text3 .round {
   position: absolute;
   top: 0;
   left: 0;
 }
 
-.text3 {margin-top: 30px;}
-.text3 .mini{
-  color: #00a8ff;
-
-
+.text3 {
+  margin-top: 30px;
 }
-.text3 .sec3{
+.text3 .mini {
+  color: #00a8ff;
+}
+.text3 .sec3 {
   font-family: Rubik;
   font-weight: 600;
   font-size: 50px;
   color: #f1f1f1;
 }
-.pra3{
+.pra3 {
   font-size: 20px;
   font-weight: 400;
   font-family: Rubik;
   line-height: 28px;
-
 }
-.list li{
- margin-left: 5px;
- color: #f1f1f1;
+.list li {
+  margin-left: 5px;
+  color: #f1f1f1;
   list-style: none;
   font-size: 20px;
   font-weight: 400;
   font-family: Rubik;
   line-height: 46px;
-
 }
 
-.p2{
+.p2 {
   font-size: 20px;
   font-weight: 400;
   font-family: Rubik;
   line-height: 28px;
 }
-ul li img{
+ul li img {
   margin-right: 5px;
 }
-.image_3 img{
+.image_3 img {
   position: relative;
   width: 120.3%;
-  
 }
-
 
 /* Siham */
 
-#section_4{
-    
+#section_4 {
   height: 838px;
   top: 2654px;
 }
-.titre{
- color: #FFFFFF;
- font-family: Rubik;
- font-weight: 600;
- font-size: 56px;
- line-height: 78.4px;
+.titre {
+  color: #ffffff;
+  font-family: Rubik;
+  font-weight: 600;
+  font-size: 56px;
+  line-height: 78.4px;
 }
-p{
-  color: #FFFFFF;
+p {
+  color: #ffffff;
   font-family: Rubik;
   font-weight: 400;
   font-size: 20px;
   line-height: 15px;
   margin-top: 30px;
-
 }
-.div1 img{
-  border: #FFFFFF 2px;
+.div1 img {
+  border: #ffffff 2px;
   width: 238.23px;
   height: 244.06px;
   top: 279.02px;
@@ -352,7 +390,7 @@ p{
   text-align: center;
 }
 
-.text-overlay{
+.text-overlay {
   position: absolute;
   top: 50%;
   left: 50%;
@@ -362,30 +400,25 @@ p{
   font-weight: bold;
   padding-right: 100px;
   padding: 10px 15px;
-  
 }
 /* kawtar */
 
 /* #section_5{
     /* background-color: #f7f8fa ; */
-    /* display: flex;
+/* display: flex;
   justify-content: center;
   align-items: center;
   height: 100vh; */
 
-
-
-
 .video-container {
-  background-image:url("/front/One_Page/Home_Page/assets/BANNIERE CMC RABAT 1.png") ;
-  background-position:center ;
+  background-image: url("/front/One_Page/Home_Page/assets/BANNIERE CMC RABAT 1.png");
+  background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
   height: 100vh;
   border-top-left-radius: 80px;
- 
+
   position: relative;
- 
 }
 
 .video-container img {
@@ -402,9 +435,7 @@ p{
   display: flex;
   justify-content: center;
   align-items: center;
- 
 }
-
 
 .play-button {
   width: 50px;
